Fix alignment in table

--- a/adminui/src/css/sb-admin-2.css
+++ b/adminui/src/css/sb-admin-2.css
@@ -10289,67 +10289,67 @@ a:focus {
 
 @keyframes noise-anim {
   0% {
-    clip: rect(39px, 9999px, 56px, 0);
+    clip: rect(45px, 9999px, 55px, 0);
   }
   5% {
-    clip: rect(42px, 9999px, 4px, 0);
+    clip: rect(71px, 9999px, 30px, 0);
   }
   10% {
-    clip: rect(30px, 9999px, 6px, 0);
+    clip: rect(48px, 9999px, 29px, 0);
   }
   15% {
-    clip: rect(35px, 9999px, 30px, 0);
+    clip: rect(24px, 9999px, 69px, 0);
   }
   20% {
-    clip: rect(71px, 9999px, 45px, 0);
+    clip: rect(81px, 9999px, 16px, 0);
   }
   25% {
-    clip: rect(33px, 9999px, 7px, 0);
+    clip: rect(98px, 9999px, 71px, 0);
   }
   30% {
-    clip: rect(24px, 9999px, 12px, 0);
+    clip: rect(13px, 9999px, 94px, 0);
   }
   35% {
-    clip: rect(56px, 9999px, 33px, 0);
+    clip: rect(98px, 9999px, 75px, 0);
   }
   40% {
-    clip: rect(44px, 9999px, 59px, 0);
+    clip: rect(59px, 9999px, 81px, 0);
   }
   45% {
-    clip: rect(69px, 9999px, 52px, 0);
+    clip: rect(88px, 9999px, 41px, 0);
   }
   50% {
-    clip: rect(22px, 9999px, 42px, 0);
+    clip: rect(5px, 9999px, 69px, 0);
   }
   55% {
-    clip: rect(85px, 9999px, 13px, 0);
+    clip: rect(54px, 9999px, 60px, 0);
   }
   60% {
-    clip: rect(25px, 9999px, 87px, 0);
+    clip: rect(7px, 9999px, 60px, 0);
   }
   65% {
-    clip: rect(2px, 9999px, 47px, 0);
+    clip: rect(75px, 9999px, 91px, 0);
   }
   70% {
-    clip: rect(26px, 9999px, 27px, 0);
+    clip: rect(18px, 9999px, 45px, 0);
   }
   75% {
-    clip: rect(90px, 9999px, 47px, 0);
+    clip: rect(63px, 9999px, 67px, 0);
   }
   80% {
-    clip: rect(49px, 9999px, 41px, 0);
+    clip: rect(24px, 9999px, 69px, 0);
   }
   85% {
-    clip: rect(67px, 9999px, 65px, 0);
+    clip: rect(85px, 9999px, 78px, 0);
   }
   90% {
-    clip: rect(53px, 9999px, 23px, 0);
+    clip: rect(59px, 9999px, 70px, 0);
   }
   95% {
-    clip: rect(35px, 9999px, 98px, 0);
+    clip: rect(41px, 9999px, 78px, 0);
   }
   100% {
-    clip: rect(32px, 9999px, 10px, 0);
+    clip: rect(46px, 9999px, 37px, 0);
   }
 }
 .error:after {
@@ -10367,67 +10367,67 @@ a:focus {
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(17px, 9999px, 90px, 0);
+    clip: rect(27px, 9999px, 36px, 0);
   }
   5% {
-    clip: rect(100px, 9999px, 41px, 0);
+    clip: rect(86px, 9999px, 71px, 0);
   }
   10% {
-    clip: rect(44px, 9999px, 33px, 0);
+    clip: rect(86px, 9999px, 46px, 0);
   }
   15% {
-    clip: rect(18px, 9999px, 57px, 0);
+    clip: rect(51px, 9999px, 35px, 0);
   }
   20% {
-    clip: rect(69px, 9999px, 16px, 0);
+    clip: rect(2px, 9999px, 23px, 0);
   }
   25% {
-    clip: rect(74px, 9999px, 53px, 0);
+    clip: rect(49px, 9999px, 13px, 0);
   }
   30% {
-    clip: rect(22px, 9999px, 30px, 0);
+    clip: rect(16px, 9999px, 2px, 0);
   }
   35% {
-    clip: rect(75px, 9999px, 87px, 0);
+    clip: rect(70px, 9999px, 1px, 0);
   }
   40% {
-    clip: rect(73px, 9999px, 5px, 0);
+    clip: rect(98px, 9999px, 95px, 0);
   }
   45% {
-    clip: rect(4px, 9999px, 23px, 0);
+    clip: rect(85px, 9999px, 79px, 0);
   }
   50% {
-    clip: rect(38px, 9999px, 72px, 0);
+    clip: rect(15px, 9999px, 1px, 0);
   }
   55% {
-    clip: rect(100px, 9999px, 11px, 0);
+    clip: rect(55px, 9999px, 82px, 0);
   }
   60% {
-    clip: rect(87px, 9999px, 52px, 0);
+    clip: rect(58px, 9999px, 20px, 0);
   }
   65% {
-    clip: rect(84px, 9999px, 42px, 0);
+    clip: rect(82px, 9999px, 43px, 0);
   }
   70% {
-    clip: rect(51px, 9999px, 74px, 0);
+    clip: rect(1px, 9999px, 60px, 0);
   }
   75% {
-    clip: rect(53px, 9999px, 100px, 0);
+    clip: rect(72px, 9999px, 56px, 0);
   }
   80% {
-    clip: rect(96px, 9999px, 49px, 0);
+    clip: rect(5px, 9999px, 95px, 0);
   }
   85% {
-    clip: rect(71px, 9999px, 64px, 0);
+    clip: rect(95px, 9999px, 56px, 0);
   }
   90% {
-    clip: rect(42px, 9999px, 3px, 0);
+    clip: rect(23px, 9999px, 76px, 0);
   }
   95% {
-    clip: rect(52px, 9999px, 80px, 0);
+    clip: rect(60px, 9999px, 10px, 0);
   }
   100% {
-    clip: rect(46px, 9999px, 17px, 0);
+    clip: rect(14px, 9999px, 56px, 0);
   }
 }
 .error:before {
